# count-the-notes

./: .gitignore  LICENSE.md  README.md  evaluate.py  index.html  inference.py  make_parsed_tsv_from_midi.py  pyproject.toml  requirements.txt  train.py
NoteEM_tsv/: README.md
ckpts/: checkpoint_link.txt
conversion_maps/: constant_conversion_map.py
datasets/: README.md
onsets_and_frames/: __init__.py  constants.py  dataset.py  decoding.py  lstm.py  mel.py  midi_utils.py  transcriber.py  utils.py
scripts/: make_parsed_tsv_from_midi.py  make_pitch_shifted_copies.py
