[project]
name = "count-the-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dtw-python==1.3.0",
    "einops==0.6.1",
    "librosa>=0.6.2",
    "mido>=1.2.9",
    "mir-eval==0.7",
    "numpy>=1.15.0",
    "pillow>=6.2.0",
    "pyyaml==6.0",
    "sacred==0.7.4",
    "scipy>=1.1.0",
    "soundfile>=0.10.2",
    "torch==2.0.1",
    "tqdm>=4.28.1",
    "wandb>=0.15.0",
]
